# advent-of-code-2020

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: aoc.yml
advent_of_code/day_1/: __init__.py
advent_of_code/day_10/: __init__.py
advent_of_code/day_11/: __init__.py
advent_of_code/day_2/: __init__.py
advent_of_code/day_3/: __init__.py
advent_of_code/day_4/: __init__.py
advent_of_code/day_5/: __init__.py
advent_of_code/day_6/: __init__.py
advent_of_code/day_7/: __init__.py
advent_of_code/day_8/: __init__.py
advent_of_code/day_9/: __init__.py
tests/: test_day_1.py  test_day_10.py  test_day_11.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py
