[tool.poetry]
name = "advent_of_code"
version = "10.1.0"
description = "Solutions to the challenges set in Advent of Code 2020"
authors = ["Kristian Zarebski <krizar312@gmail.com>"]
license = "GPL-v3"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
tabulate = "^0.8.7"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
